refactor: use List.copyOf/Set.copyOf (Java 10+)
Motivation:
Replace Collections.unmodifiableList(new ArrayList<>(...)) with the
more concise List.copyOf() available since Java 10.

Modification:
Use List.copyOf() and Set.copyOf() which create immutable copies in
a single call, eliminating the intermediate mutable collection.

Result:
Cleaner, more concise code. List.copyOf also rejects nulls, providing
fail-fast behavior for configuration classes.